--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <!-- Footer -->
     <footer id="footer" class="bg-verydarkBlue">
         <!-- Footer Container -->
-        <div class="container flex flex-col-reverse justify-between px-12 py-16 mx-auto gap-y-16 lg:flex-row">
+        <div class="container flex flex-col-reverse justify-between px-12 mx-auto py-14 gap-y-16 lg:flex-row">
             <!-- Footer Social -->
             <div class="flex flex-col items-center justify-between space-y-16 lg:space-y-0 lg:flex-col-reverse">
                 <ul class="flex flex-row justify-between flex-shrink-0 gap-4 md:gap-8 lg:gap-6">
@@ -242,6 +242,8 @@
                     class="block p-3 px-6 text-sm font-semibold text-white rounded-full cursor-pointer bg-brightRed hover:bg-brightRedLight">
             </form>
         </div>
+        <!-- Footer Copyright -->
+        <small class="block py-2 text-sm text-center text-darkGrayishBlue">Copyright 2020. All Rights Reserved </small>
     </footer>
 </body>
 
