--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
     <!-- Footer -->
     <footer id="footer" class="bg-verydarkBlue">
         <!-- Footer Container -->
-        <div class="container flex flex-col-reverse justify-between px-12 mx-auto py-14 gap-y-16 lg:flex-row">
+        <div class="container flex flex-col-reverse justify-between px-12 mx-auto lg:py-12 lg:space-y-0 lg:flex-row">
             <!-- Footer Social -->
-            <div class="flex flex-col items-center justify-between space-y-16 lg:space-y-0 lg:flex-col-reverse">
-                <ul class="flex flex-row justify-between flex-shrink-0 gap-4 md:gap-8 lg:gap-6">
+            <div class="flex flex-col items-center justify-between py-6 space-y-16 lg:space-y-0 lg:flex-col-reverse">
+                <ul class="flex flex-row justify-between flex-shrink-0 space-x-8">
                     <li><img class="" src="img/icon-facebook.svg" alt=""></li>
                     <li><img class="w-6" src="img/icon-instagram.svg" alt=""></li>
                     <li><img class="w-6" src="img/icon-pinterest.svg" alt=""></li>
@@ -222,7 +222,8 @@
             </div>
 
             <!-- Footer List -->
-            <ul class="grid grid-cols-2 text-sm font-semibold text-center text-white gap-y-3 gap-x-20 lg:text-left ">
+            <ul
+                class="grid grid-cols-2 py-6 text-sm font-semibold text-center text-white gap-y-3 gap-x-20 lg:text-left ">
                 <li><a href="#" class="hover:text-darkGrayishBlue">Home</a></li>
                 <li><a href="#" class="hover:text-darkGrayishBlue">Careers</a></li>
                 <li><a href="#" class="hover:text-darkGrayishBlue">Pricing</a></li>
@@ -233,7 +234,7 @@
             </ul>
 
             <!-- Footer Form -->
-            <form class="flex flex-row space-x-2 lg:self-start ">
+            <form class="flex flex-row pt-12 pb-6 space-x-2 lg:self-start ">
                 <!--Footer Form Email-->
                 <input type="email" name="email" id="email" placeholder="Updates in your inbox..."
                     class="w-full p-3 px-3 border-0 rounded-full outline-none lg:w-auto focus:outline-2 focus:outline-offset-0 focus:outline-brightRed">
