--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Navigation -->
     <nav class="container relative p-5 mx-auto">
-        <!-- Navigation Flex Container -->
+        <!-- Navigation Container -->
         <div class="flex items-center justify-between">
             <!-- Navigation Logo -->
             <div class="pt-2">
@@ -36,7 +36,7 @@
 
     <!-- Hero section -->
     <section id="hero">
-        <!-- Hero Flex Container -->
+        <!-- Hero  Container -->
         <div class="container flex flex-col-reverse items-center justify-between px-12 mx-auto mt-14 lg:flex-row">
             <!--Hero left-->
             <div class="flex flex-col space-y-10 lg:w-2/5">
@@ -72,7 +72,7 @@
 
     <!-- Features Section -->
     <section id="features">
-        <!-- Features Flex Container -->
+        <!-- Features  Container -->
         <div class="container flex flex-col justify-between px-6 mx-auto space-y-10 mt-14 lg:space-y-0 lg:flex-row">
             <!--Features left-->
             <div class="flex flex-col items-center mx-auto space-y-10 lg:items-stretch lg:w-1/2">
@@ -211,13 +211,15 @@
         <div class="container flex flex-col-reverse justify-between px-12 mx-auto lg:py-12 lg:space-y-0 lg:flex-row">
             <!-- Footer Social -->
             <div class="flex flex-col items-center justify-between py-6 space-y-16 lg:space-y-0 lg:flex-col-reverse">
+                <!-- Footer Social List -->
                 <ul class="flex flex-row justify-between flex-shrink-0 space-x-8">
-                    <li><img class="" src="img/icon-facebook.svg" alt=""></li>
+                    <li><img class="w-6" src="img/icon-facebook.svg" alt=""></li>
                     <li><img class="w-6" src="img/icon-instagram.svg" alt=""></li>
                     <li><img class="w-6" src="img/icon-pinterest.svg" alt=""></li>
                     <li><img class="w-6" src="img/icon-twitter.svg" alt=""></li>
                     <li><img class="w-6" src="img/icon-youtube.svg" alt=""></li>
                 </ul>
+                <!-- Footer Social Logo -->
                 <img src="img/logo-white.svg" alt="white manage logo" class="w-56">
             </div>
 
